2012-03-24  Jan Hubicka  <jh@suse.cz>

	PR lto/51663
	* varpool.c (varpool_finalize_decl): Handle toplevel_reorder here.
	(decide_is_variable_needed): Do not handle toplevel reorder here.
	* cgraph.h (varpool_can_remove_if_no_refs): Likewise.
	* ipa.c (cgraph_remove_unreachable_nodes): Remove unreachable vars
	even at -O0.

2012-03-24  Eric Botcazou  <ebotcazou@adacore.com>

	* expr.c (optimize_bitfield_assignment_op) <BIT_IOR_EXPR>: Use str_mode
	and str_bitsize instead of more convoluted expressions.

2012-03-24  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/52610
	* config/sparc/sparc.h (ASM_CPU_SPEC): Pass -Av8 if -mcpu=leon.

2012-03-24  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/52656
	* config/sparc/sparc.c (sparc_handle_vis_mul8x16): Fix pasto.

2012-03-23  Martin Jambor  <mjambor@suse.cz>

	* tree-sra.c (build_accesses_from_assign): Remove FIXME comment.

2012-03-23  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52678
	* tree-vectorizer.h (struct _stmt_vec_info): Add
	loop_phi_evolution_part member.
	(STMT_VINFO_LOOP_PHI_EVOLUTION_PART): New define.
	* tree-vect-loop.c (vect_analyze_scalar_cycles_1): Initialize
	STMT_VINFO_LOOP_PHI_EVOLUTION_PART.
	* tree-vect-loop-manip.c (vect_update_ivs_after_vectorizer):
	Use the cached evolution part and the PHI nodes value from
	the loop preheader edge instead of re-analyzing the evolution.

2012-03-22  Maxim Kuvyrkov  <maxim@codesourcery.com>

	* config/mips/mips-tables.opt: Update.
	* config/mips/mips.md (processor): Add xlp.
	* config/mips/mips-cpus.def: Add xlp.
	* config/mips/mips.c (mips_rtx_cost_data): Add costs for XLP, copy from
	5KF for now.
	* config/mips/mips.h (MIPS_ISA_LEVEL_SPEC): Handle xlp.
	* doc/invoke.texi: Mention XLP.

2012-03-22  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/52547
	* tree-nested.c (convert_tramp_reference_stmt): Call declare_vars
	on any new_local_var_chain vars declared during recursing on
	GIMPLE_OMP_PARALLEL or GIMPLE_OMP_TASK body.
